[gd_scene load_steps=28 format=2]

[ext_resource path="res://Assets/EnemySprites/AnimationSheet_Enemy.png" type="Texture" id=1]
[ext_resource path="res://Scripts/EnemyWalker.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 1 )
region = Rect2( 0, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 1 )
region = Rect2( 32, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 1 )
region = Rect2( 64, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 1 )
region = Rect2( 96, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 1 )
region = Rect2( 128, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 1 )
region = Rect2( 160, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 1 )
region = Rect2( 192, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 1 )
region = Rect2( 224, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 1 )
region = Rect2( 96, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 1 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 1 )
region = Rect2( 64, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 1 )
region = Rect2( 96, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 1 )
region = Rect2( 128, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 1 )
region = Rect2( 160, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 1 )
region = Rect2( 192, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 1 )
region = Rect2( 224, 96, 32, 32 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ) ],
"loop": false,
"name": "die",
"speed": 8.0
}, {
"frames": [ SubResource( 53 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 32 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ) ],
"loop": true,
"name": "move",
"speed": 9.0
} ]

[sub_resource type="CapsuleShape2D" id=31]
radius = 15.0
height = 30.0

[sub_resource type="RectangleShape2D" id=52]
extents = Vector2( 280, 28 )

[sub_resource type="RectangleShape2D" id=54]
extents = Vector2( 17.5, 29.5 )

[node name="EnemyWalker" type="KinematicBody2D" groups=["Damagable", "Enemy"]]
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="." groups=["Player"]]
scale = Vector2( 2, 2 )
z_index = -1
frames = SubResource( 14 )
animation = "fall"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 3 )
shape = SubResource( 31 )

[node name="Detection" type="Area2D" parent="."]
position = Vector2( 1, 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
position = Vector2( 0, -2 )
shape = SubResource( 52 )

[node name="DamageArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2( -0.5, 3.5 )
shape = SubResource( 54 )

[node name="Timers" type="Node2D" parent="."]

[node name="CanHitTimer" type="Timer" parent="Timers"]
wait_time = 0.5
one_shot = true

[node name="damageTimer" type="Timer" parent="Timers"]
wait_time = 0.1
one_shot = true

[connection signal="body_entered" from="Detection" to="." method="_on_Detection_body_entered"]
[connection signal="body_exited" from="Detection" to="." method="_on_Detection_body_exited"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_DamageArea_body_entered"]
[connection signal="body_exited" from="DamageArea" to="." method="_on_DamageArea_body_exited"]
[connection signal="timeout" from="Timers/CanHitTimer" to="." method="_on_CanHitTimer_timeout"]
[connection signal="timeout" from="Timers/damageTimer" to="." method="_on_damageTimer_timeout"]
